--- a/ex1-login-page/index.html
+++ b/ex1-login-page/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Framework (Tailwind) Exercise 1</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CSS Framework (Tailwind) Exercise 1</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
+  <body>
+    <div
+      class="bg-slate-200 w-screen h-screen flex justify-center items-center"
+    >
+      <div class="bg-white rounded-xl p-8 flex flex-col align-middle gap-3">
+        <h1 class="text-zinc-600 text-xl">Login to Website</h1>
 
-<body>
-  <!-- Start coding here -->
-</body>
+        <div class="flex justify-between">
+          <label for="email" class="">Email</label>
+          <input
+            type="email"
+            class="border border-zinc-600 p-2 hover:border-violet-300 focus:outline-none focus:border-y-violet-500"
+          />
+        </div>
 
+        <div class="flex justify-between">
+          <label for="password" class="">Password</label>
+          <input
+            type="password"
+            class="border border-zinc-600 p-2 hover:border-violet-300 focus:outline-none focus:border-y-violet-500"
+          />
+        </div>
+
+        <div>
+        <button
+          class="p-2 w-36 rounded-full bg-violet-500 text-white active:bg-violet-600 hover:bg-violet-400 focus:ring focus:ring-violet-300"
+        >
+        </div>
+        
+          sign in
+        </button>
+        <button
+          class="p-2 w-36 rounded-full text-violet-500 bg-white hover:bg-violet-100 focus:ring focus:ring-violet-300"
+        >
+          Sign up
+        </button>
+      </div>
+    </div>
+  </body>
 </html>
